wacc/test/golden/semanticErr.pairs.freeNonPair
# call free on a non-pair type 

# Output:
# #semantic_error#

# Exit:
# 200

# Program:

begin
  int x = 5;
  println x;
  free 9 ; 
  println x
end


In test/wacc_examples/invalid/semanticErr/pairs/freeNonPair.wacc (line 14, column 8):
type error: only arrays and pairs may be freed, but an int was found
>   println x;
>   free 9 ; 
>        ^
>   println x

